3.1:
 - add possible outputs class
 - update env vars
3.0.9 - move unused files to tmp
3.0.8 - minor changes
3.0.7 - add Github actions
3.0.6 - ChimeraX support
3.0.5 - changed version to reflect Scipion 3 support
1.0.5:
    - switch to a fork of Anisotropy software
    - fix output histogram
    - use "with open"
1.0.4:
    - updated release for scipion 3
1.0.3:
    - migrated to python 3
    - plugin renamed to fsc3d, 2.5 version removed
1.0.2 - Include protocol.conf to create the source distribution
1.0.1 - changed logo, fixed PYTHONPATH, added version 3.0
1.0.0 - First version of the plugin